[gd_scene load_steps=2 format=3 uid="uid://int36hv4tpps"]

[ext_resource type="Script" path="res://Scenes/Buildings/Building Button.gd" id="1"]

[node name="Building Button" type="Node2D" groups=["building_button"]]
position = Vector2(-1, 0)
script = ExtResource("1")

[node name="Build Button" type="Button" parent="."]
offset_right = 48.0
offset_bottom = 48.0
tooltip_text = "Place a Building Here!"

[node name="Manage_Building" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 48.0
offset_bottom = 48.0

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = -41.0
offset_top = -22.0
offset_right = 97.0
offset_bottom = 78.0

[node name="BuildingBut1" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 54.0
offset_bottom = 43.0
tooltip_text = "Wood Cutter:
- 1 Iron
- 2 Drink
- 2 Food

"
text = "WC"

[node name="BuildingBut2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 76.0
offset_top = 10.0
offset_right = 109.0
offset_bottom = 43.0
tooltip_text = "Blacksmith:
- 2 Wood
- 2 Drink
- 2 Food"
text = "BS"

[node name="BuildingBut3" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 51.0
offset_right = 53.0
offset_bottom = 84.0
tooltip_text = "Brewer:
- 4 Food"
text = "BR"

[node name="BuildingBut4" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 77.0
offset_top = 52.0
offset_right = 110.0
offset_bottom = 85.0
tooltip_text = "Farm:
- 2 Drink"
text = "FM"

[node name="Built_Tower" type="Node2D" parent="."]

[node name="Manage_Panel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -15.0
offset_right = 74.0
offset_bottom = 64.0

[node name="Destroy_button" type="Button" parent="Manage_Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 48.0
offset_right = 64.0
offset_bottom = 73.0
text = "$"

[node name="Upgrade_button" type="Button" parent="Manage_Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 14.0
offset_right = 64.0
offset_bottom = 39.0
text = "Up"

[connection signal="pressed" from="Build Button" to="." method="_on_Build_Button_pressed"]
[connection signal="pressed" from="Manage_Building" to="." method="_on_Manage_Building_pressed"]
[connection signal="button_down" from="Panel/BuildingBut1" to="." method="_on_building_but_1_button_down"]
[connection signal="button_down" from="Panel/BuildingBut2" to="." method="_on_building_but_2_button_down"]
[connection signal="button_down" from="Panel/BuildingBut3" to="." method="_on_building_but_3_button_down"]
[connection signal="button_down" from="Panel/BuildingBut4" to="." method="_on_building_but_4_button_down"]
[connection signal="button_down" from="Manage_Panel/Destroy_button" to="." method="_on_destroy_button_button_down"]
[connection signal="pressed" from="Manage_Panel/Destroy_button" to="." method="_on_Destroy_button_pressed"]
[connection signal="button_down" from="Manage_Panel/Upgrade_button" to="." method="_on_upgrade_button_button_down"]
[connection signal="pressed" from="Manage_Panel/Upgrade_button" to="." method="_on_Upgrade_button_pressed"]
